--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="icon" href="https://raw.githubusercontent.com/Hoidberg/bootstrap/master/favicon.ico">
+    <link rel="icon" href="https://raw.githubusercontent.com/Hoidberg/bootstrap/master/favicon.svg">
     
     <!-- Bootstrap Styles -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
